Fixed the item box spacing issue

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
 }
 .c-menu {
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
-  margin: 0 3rem 6rem 3rem;
+  margin: 0 0 6rem 0;
   border-radius: 3rem;
   display: flex;
   flex-direction: row;
@@ -135,12 +135,12 @@ form {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  width: 100%;
 }
 .c-list-item {
   margin: 0 auto 5rem auto;
-  width: 100%;
   display: flex;
+  width: 100%;
+  max-width: 120rem;
   flex-direction: row;
   align-items: center;
   border: 0.1rem solid #e8e8e8;
